--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-keycloak/native": "^0.5.1",
     "react": "16.13.1",
-    "react-native": "0.63.2"
+    "react-native": "0.63.2",
+    "react-native-inappbrowser-reborn": "^3.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.11.6",
